--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -13,6 +13,11 @@ a:link, a:visited, a:hover {
   display: none !important;
 }
 
+body {
+	background-color: red;
+	color: #fff;
+}
+
 .max-display {
 	max-width: 1000px;
 	height: 100%;
